--- a/Atemporal nights/tickets.html
+++ b/Atemporal nights/tickets.html
@@ -14,10 +14,50 @@
         <a href="about.html"> ჩვენს შესახებ | </a>
         </ul>
     <div>
+        <img src="src/eventticket.png" alt="event poster" style="width:100%">
+    </div>
+    <div>
         <h2>შეიძინე ბილეთი Atemporal Night_ზე და მიიღე ოპტიკური ილუზიებით მდიდარი მუსიკალური გამოცდილება</h2>
     </div>
     <div>
-        <img src="src/eventticket.png" alt="event poster" style="width:100%">
-    </div>
+      <form>
+        <label>სახელი:</label>
+       <input type="name" placeholder="ჩაწერეთ თქვენი სახელი"required/>
+       </form>
+       <form>
+        <label>გვარი:</label>
+       <input type="name" placeholder="ჩაწერეთ თქვენი გვარი"required/>
+       </form>
+     </div>
+     <div>
+        <form>
+            <label>E-mail:</label>
+            <input type="email" placeholder="user@email.com" required/>
+        </form>
+     </div>
+     <div>
+        <form>
+            <label>ტელეფონი</label>
+            <input type="text" placeholder="XXX-XX-XX-XX"/>
+        </form>
+     </div>
+     <div>
+        <form>
+            <label>მიუთითეთ რამდენი ბილეთის შეძენა გსურთ</label>
+            <input type="number" step="1" min="1" max="20" placeholder="0" required/>
+        </form>
+     </div>
+     <div>
+        <form>
+            <input type="checkbox" required/>
+            <label>ვეთანხმები წესებსა და პირობებს</label>
+        </form>
+     </div>
+     <div>
+        <form>
+            <button type="submit">ყიდვა</button> 
+        </form>
+     </div>
+    
 </body>
 </html>
